@@ -1,5 +1,14 @@
-# Install Java 21 (required for Pyserini-Search), if you want to run the TriviaQA search example
-# First remove any old Java versions
+#!/bin/bash
+
+# install python env
+conda create -n verifier_env python=3.11 -y
+source activate verifier_env
+
+pip install -r requirements.txt
+pip install flash-attn --no-build-isolation
+
+
+# install jave env (if needed)
 apt-get remove --purge openjdk*
 
 # Add Java 21 repository
@@ -13,20 +22,10 @@ apt-get update
 apt-get install -y temurin-21-jdk
 
 # Set Java environment variables
-export JAVA_HOME=/usr/lib/jvm/temurin-21-jdk-amd64
 export PATH=$JAVA_HOME/bin:$PATH
-export JAVA_OPTS="--add-modules jdk.incubator.vector -Xms4g -Xmx12g -XX:+UseG1GC"
-export JVM_PATH=/usr/lib/jvm/temurin-21-jdk-amd64/lib/server/libjvm.so
 export LD_LIBRARY_PATH=/usr/lib/jvm/temurin-21-jdk-amd64/lib/server:$LD_LIBRARY_PATH
+export JAVA_HOME=/usr/lib/jvm/temurin-21-jdk-amd64
+export JVM_PATH=/usr/lib/jvm/temurin-21-jdk-amd64/lib/server/libjvm.so
 
 # Verify Java installation
 java -version
-
-# Create a virtual environment named "triviaqa-env"
-
-# uv sync
-
-# uv pip install pyserini
-
-# # Install flash-attn separately (requires special handling)
-# uv pip install flash-attn --no-build-isolation
